added package to launcher

--- a/ansible-terraform/gitlab-install-playbook.yml
+++ b/ansible-terraform/gitlab-install-playbook.yml
@@ -25,6 +25,7 @@
           - curl
           - policycoreutils-python
           - postfix
+          - golang-go
         state: present
 
     - name: Start postfix
