--- a/ansible-terraform/gitlab-configure-playbook.yml
+++ b/ansible-terraform/gitlab-configure-playbook.yml
@@ -19,8 +19,8 @@
         name:
           - gitlab-ce
         state: present
-      environment:
-        EXTERNAL_URL: "{{ pipeline_hostname }}"
+      # environment:
+      #   EXTERNAL_URL: "{{ pipeline_hostname }}"
 
     - name: Run configure script
       command: gitlab-ctl reconfigure
