--- a/ansible-terraform/selfhost-config-playbook.yml
+++ b/ansible-terraform/selfhost-config-playbook.yml
@@ -1,5 +1,8 @@
-- hosts: 127.0.0.1
-
+#- hosts: 127.0.0.1
+---
+- name: Install mongodb
+  hosts: "{{ variable_host }}"  
+  become: true
   vars:
           #foo: ""          # foo is defined and foo == '' and foo != None
           #bar:             # bar is defined and bar != '' and bar == None
@@ -11,6 +14,6 @@
   #     msg: "foo is defined and foo == '' and foo != None"
   #   when: foo is defined and foo == '' and foo != None
   roles:
-  - role: girder.mongodb
-    mongodb_version: 4.0
-    mongodb_data_path: /var/lib/mongodb
+    - role: girder.mongodb
+      mongodb_version: 4.0
+      mongodb_data_path: /var/lib/mongodb
