--- a/ansible-terraform/tyk-variables.yml
+++ b/ansible-terraform/tyk-variables.yml
@@ -1,2 +1,2 @@
-gateway-port: 3001
-tyk-hostname: ec2-13-239-64-180.ap-southeast-2.compute.amazonaws.com
+gateway_port: 3001
+tyk_hostname: ec2-13-239-64-180.ap-southeast-2.compute.amazonaws.com
