--- a/ansible-terraform/gitlab-runner-playbook.yml
+++ b/ansible-terraform/gitlab-runner-playbook.yml
@@ -8,8 +8,15 @@
 
 
   tasks:
+
+    - name: Download Runner script from gitlab
+      get_url:
+        url: https://packages.gitlab.com/install/repositories/runner/gitlab-runner/script.rpm.sh 
+        dest: /tmp/script.rpm.sh
+        mode: '0755'
+
     - name: Run runner script #https://docs.gitlab.com/runner/install/linux-repository.html
-      command: curl -L https://packages.gitlab.com/install/repositories/runner/gitlab-runner/script.rpm.sh | sudo bash
+      command: /tmp/script.rpm.sh
       register: configure_result
     - debug: var=configure_result
 
